# fastdoctl

./: .gitignore  .gitmodules  README.md  autogen.sh  configure.ac  fastdoctl.settings  fastdoctl.sln  fastdoctl.vcxproj  fastdoctl.vcxproj.filters  fastdoctl_readme.txt
fastdoctl_mods/: T-Debug.bat  T-Release.bat  api.ecp
include/: ctl_ControlCenterApp.hpp  ctl_web_handlers.hpp  functional.hpp  functional_win.hpp
src/: Makefile.am  RegOperate.cpp  RegOperate.h  ctl_ControlCenterApp.cpp  ctl_ControlCenterApp.hpp  ctl_api_handlers.cpp  ctl_api_handlers.hpp  ctl_common.hpp  ctl_common_unix.cpp  ctl_common_win.cpp  ctl_web_handlers.cpp  functional_unix.cpp  functional_win.cpp  main.cpp  register_web_handlers.cpp
website/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
website/src/: App.vue  main.ts  router.ts
website/src/components/: Dashboard.vue  EnvCheck.vue  ErrorBadge.vue  HelloWorld.vue  StepProgress.vue
website/src/pages/: EnvCheck.vue  EnvVars.vue  HelloWorld.vue  ModifyConfig.vue
website/src/stores/: EnvInfoStore.ts
